--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     /* Color gris para el camino visitado */
     .path {
-      background-color: #dc3545;
+      background-color: #C0C0C0;
     }
 
     /* Color rojo para el camino óptimo */
