--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 
     /* Color negro para el estado de obstáculo */
     .visited {
-      background-color: #6c757d;
+      background-color: #C0C0C0;
     }
 
     /* Color gris para el camino visitado */
     .path {
-      background-color: #C0C0C0;
+      background-color: #B50070;
     }
 
     /* Color rojo para el camino óptimo */
